Bug 1550585 - no need to check whether media is playing when dispatching 'TimeMarchesOn' and 'UpdateCueDisplay'. r=jya

The spec [1] doesn't mention that we should run `TimeMarchesOn` or `UpdateCueDisplay` only after media starts playing.

Removing the checking can help us to render the cue correctly no matter media starts or not.

[1] https://html.spec.whatwg.org/multipage/media.html#time-marches-on

Differential Revision: https://phabricator.services.mozilla.com/D31504

--HG--
extra : moz-landing-system : lando